--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt" class="light">
+<html lang="pt" class="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/index.css" />
   </head>
   <body
-    class="bg-slate-50 text-slate-900 antialiased selection:bg-purple-200"
+    class="bg-[#121212] text-[#E0E0E0] antialiased selection:bg-yellow-500/30"
   >
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
